--- a/relife.ipynb
+++ b/relife.ipynb
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "raw_data = pd.read_csv(r\"C:\\Users\\user\\Desktop\\365 datasciece\\datasets\\1.04. Real-life example.csv\")\n",
+    "raw_data = pd.read_csv(" Real-life example.csv")\n",
     "\n",
     "# Let's explore the top 5 rows of the df\n",
     "raw_data.head()"
